# investment-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/investment_mcp_server/: __init__.py  errors.py  fund_client.py  gold_client.py  inflation_client.py  models.py  parsers.py  portfolio_client.py  rate_limiter.py  server.py  settings.py  stock_client.py  yahoo_client.py
src/investment_mcp_server/tools/: __init__.py  compare_asset_returns.py  currency_ohlcv_bars.py  customer_portfolio.py  fund_price_data.py  gold_price_data.py  ohlcv_bars.py  quote_metadata.py  real_returns.py  stock_ohlcv_bars.py  stock_quote_metadata.py  turkey_inflation.py
tests/: test_currency_ohlcv_bars_tool.py  test_customer_portfolio_tool.py  test_fund_client.py  test_fund_price_data_tool.py  test_gold_client.py  test_gold_price_data_tool.py  test_ohlcv_bars_tool.py  test_parsers.py  test_portfolio_client.py  test_quote_metadata_tool.py  test_scaffold.py  test_stock_ohlcv_bars_tool.py  test_stock_quote_metadata_tool.py  test_ticker_normalization.py  test_turkey_inflation_tool.py
