[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-mcp-server"
version = "0.1.0"
description = "Python MCP server scaffold for investment-related tools and resources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
investment-mcp-server = "investment_mcp_server.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
